fixed header, z-index, added favicon to all html pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@ header {
     font-family: Georgia, Times,'Times New Roman', serif;
     border-bottom: 2px solid #cccccc;
     width: 100%;
+    position: fixed;
+    z-index: 2;
 }
 
 /* ///// Creates a container for centered header elements ///// */
@@ -23,6 +25,7 @@ header {
     height: 100px;
     margin: 0 auto;
     padding: 1px;
+    /* z-index: 99; */
 }
 
 h1 {
@@ -31,6 +34,7 @@ h1 {
     float: left;
     padding: 30px 30px 35px 30px;
     margin: -1px 0px 0px 0px;
+    /* z-index: 99; */
 }
 
 nav{
@@ -41,6 +45,7 @@ nav{
     color: #777777;
     padding: 50px 20px 35px 0px;
     margin: -10px -15px 0px 0px;
+    /* z-index: 99; */
 } 
 
 /* ///// Specifies styling of nav links in various states of activity ///// */
@@ -72,9 +77,10 @@ a:active {
 section {
     clear: both;
     padding: 10px 0px 60px 0px;
-    margin: 0 auto;
+    margin: 120px auto;
     /* Next line completes FlexBox sticky footer (should go in main content area) */
     flex: 1;
+    /* z-index: 99999; */
 }
 
 /* ///// Creates centered container for main content ///// */
@@ -203,6 +209,7 @@ input {
     padding: 2px 0px;
     position: relative;
     bottom: 60;
+    z-index: 1;
 }
 
 .contentImages a:link {
